--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,28 +9,124 @@ body{
     background-color: #8685a2;
 }
 
+
+.border-bottom{ 
+    overflow: hidden; 
+    padding-bottom: 8px;
+    border-bottom: 1px solid  #8685a2;
+    white-space:nowrap;
+    text-overflow: ellipsis;
+
+}
+
 .main-container{
     position: relative;
-    width: 30%;
-    max-width: 350px;
-    height: 550px;
-    margin: 2% auto 0 auto;
+    width:fit-content;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
     
 }
 
+
+.play-list{
+    position: absolute;
+    top: 50px;
+    right: -303px;
+    width: 300px;
+    padding: 2% 5%;
+    font-size: 14px;
+    font-weight: bold;
+    color: #757499;
+    background-color:  #c1b9d3;
+    
+}
+
+.mp3-player{
+    position: relative;
+    width: 350px;
+    background-color: #c1b9d3
+}
+
+/*  COVER SECTION   */
+
 .art-box{
+    position: relative;
     overflow: hidden;
     height: 350px;
-    background-color: white;
+}
+
+.cover-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    
+}
+
+
+.playlist-icon{
+    position: absolute;
+    top: 20px;
+    right: 5px;
 }
 
 .cover{
-    position: absolute;
+    width: 100%;
 }
+
+
+
+/*  CONTROLS SECTION   */
 
 .controls-box{
     overflow: hidden;
-    height: 200px;
-    
+    height: 150px;
     background-color: white;
+    text-align: center;
 }
+
+.song-name{
+    font-weight: bold;
+    margin-bottom: 7px;
+}
+
+.song-autor{
+    display: block;
+    margin-bottom: 15px;
+    color: #c1b9d3;
+    font-size: 14px;
+}
+
+.controls-flex{
+    display: flex;
+    justify-content: center;
+    column-gap: 10%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.control-icon{
+    width: 20%;
+    cursor: pointer;
+}
+
+
+/*  STATUS SECTION   */
+.status-box{
+    display: flex;
+    
+    height: 60px;
+    padding-left: 70px;
+    padding-right: 70px;
+    background-color: #c1b9d3;
+    text-align: center;
+    color: #411583;
+    font-size: 14px;
+}
+
+
+
