--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,19 +9,6 @@ body{
     background-color: #8685a2;
 }
 
-
-.border-bottom{ 
-    overflow: hidden; 
-    padding-bottom: 8px;
-    border-bottom: 1px solid  #8685a2;
-    white-space:nowrap;
-    text-overflow: ellipsis;
-    cursor: pointer;
-
-}
-
-
-
 .main-container{
     position: relative;
     width:fit-content;
@@ -33,20 +20,38 @@ body{
 }
 
 
-.play-list{
+.play-list-container{
     display: none;
     overflow: auto;
     position: absolute;
-    top: 45px;
     right: -303px;
     width: 300px;
     height: 184px;
-    padding: 2% 5%;
     font-size: 14px;
     font-weight: bold;
     color: #757499;
     background-color:  #c1b9d3;
     
+}
+
+.playList{
+    margin: 0;
+    padding-left: 15px;
+    padding-right: 30px;
+    height: 100%;
+}
+
+
+.list-item{ 
+    overflow: hidden;
+    padding-top: 8px;
+    padding-left: 5px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #8685a2;   
+    cursor: pointer;
+    white-space:nowrap;
+    text-overflow: ellipsis;
+
 }
 
 .mp3-player{
