--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,7 @@ body{
     position: absolute;
     right: -303px;
     width: 300px;
-    height: 184px;
+    height: 160px;
     font-size: 14px;
     font-weight: bold;
     color: #757499;
@@ -36,17 +36,13 @@ body{
 
 .playList{
     margin: 0;
-    padding-left: 15px;
-    padding-right: 30px;
-    height: 100%;
+    padding: 0;
 }
 
 
 .list-item{ 
     overflow: hidden;
-    padding-top: 8px;
-    padding-left: 5px;
-    padding-bottom: 8px;
+    margin: 20px;
     border-bottom: 1px solid #8685a2;   
     cursor: pointer;
     white-space:nowrap;
