--- a/src/css/index.css
+++ b/src/css/index.css
@@ -98,8 +98,14 @@ body{
 }
 
 .song-name{
-    font-weight: bold;
+    overflow: hidden;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 7px;
+    font-weight: bold;
+    white-space:nowrap;
+    text-overflow: ellipsis;
 }
 
 .song-autor{
